<resources>
    <string name="app_name">TargetCaseStudy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Credit card validation strings. You do not need to make changes here. -->
    <string name="credit_card_payment_title">Credit Card Payment</string>
    <string name="credit_card_payment_subtitle">Note: you do NOT need to enter real data</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="credit_card_number_hint">Credit card number</string>

    <string name="separator_or">or</string>
    <string name="order_Ship">ship</string>
    <string name="order_c1">C1</string>

    <string name="add_to_list">add to list</string>
    <string name="add_to_card">add to cart</string>

    <string name="dummy_value">Reg: $17.99</string>

</resources>
